--- a/style.css
+++ b/style.css
@@ -30,13 +30,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin-left: 200px;
-  width: 250px;
+  width: 350px;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 100000;
 }
 
 .right {
@@ -63,6 +64,13 @@ body {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  z-index: 1000;
+}
+
+.navtxt a {
+  text-decoration: none;
+  color: black;
+  cursor: default;
 }
 
 .mainctx {
