--- a/style.scss
+++ b/style.scss
@@ -25,9 +25,10 @@ body{
 .left{
     display: flex;
     margin-left: 200px;
-    width: 250px;
+    width: 350px;
     justify-content: space-evenly;
     align-items: center;
+    z-index: 100000;
 }
 
 .right{
@@ -44,6 +45,13 @@ body{
     width: 250px;
     margin-right: 200px;
     justify-content: space-evenly;
+    z-index: 1000;
+}
+
+.navtxt a{
+    text-decoration: none;
+    color: black;
+    cursor: default;
 }
 
 .mainctx{
