--- a/style.scss
+++ b/style.scss
@@ -26,30 +26,41 @@ body{
     pointer-events: none;
 }
 
+.nav{
+    width: 100vw;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+}
+
 .top{
     display: flex;
     height: 100px;
-    width: 100vw;
-    padding: 25px;
+    width: 100%;
+    margin: 0 160px;
+    padding: 0;
     position: relative;
 }
 
 .left{
     display: flex;
-    margin-left: 200px;
-    width: 350px;
-    justify-content: space-evenly;
+    margin-left: 0;
+    width: 100%;
     align-items: center;
-    z-index: 10;
+    z-index: 100;
 }
 
 .right{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100vw;
-    height: 100px;
     position: absolute;
+    display: flex;
+    margin-right: auto;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    justify-content: flex-end;
+    z-index: 100;
 }
 
 .navtxt{
@@ -91,3 +102,26 @@ body{
     margin-top: 50px;
 }
 
+.navicon{
+    margin: 0 15px;
+}
+
+.circle{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    margin: 0 10px;
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10); 
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.10);
+    transition: all 0.5s ease;
+}
+
+.circle:hover{
+    transform: translateY(-2.5px);
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25); 
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
+}
